# engraph

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DETAILS.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/engraph-cli/: Cargo.toml
crates/engraph-cli/src/: cli.rs  hooks.rs  main.rs  output.rs  redirect.rs  rewrite.rs
crates/engraph-cli/tests/: memory.rs  post_read_hook.rs  pre_bash_hook.rs  pre_grep_hook.rs  run_budget.rs  session_start_hook.rs
crates/engraph-codegraph/: Cargo.toml
crates/engraph-codegraph/src/: bazel.rs  bazel_symbols.rs  driver.rs  gc.rs  index.rs  lib.rs  relation_kind.rs  scip_loader.rs  subgraph.rs
crates/engraph-codegraph/tests/: bazel_live.rs  bazel_symbols_live.rs  drivers_detect.rs  drivers_live.rs  gc_index.rs  loader_unit.rs  workspace_cross_repo.rs
crates/engraph-compress/: Cargo.toml
crates/engraph-compress/src/: brevity.rs  lib.rs  preprocess.rs  rank.rs  sentinel.rs  stopwords.rs
crates/engraph-compress/src/filters/: bazel.rs  build_system.rs  cargo.rs  docker.rs  generic.rs  gh.rs  git.rs  go.rs  js.rs  jvm.rs  kubectl.rs  lint.rs  make.rs  mod.rs  npm.rs  python.rs  read.rs  search.rs  tree.rs  util.rs
crates/engraph-compress/tests/: filter_ratios.rs  git_log_ratio.rs  golden_fixtures.rs  read_filter.rs
crates/engraph-compress/tests/fixtures/: cargo_check_basic.expected.txt  cargo_check_basic.in.txt  cargo_test_nextest.expected.txt  cargo_test_nextest.in.txt  git_log_basic.expected.txt  git_log_basic.in.txt
crates/engraph-core/: Cargo.toml
crates/engraph-core/src/: budget.rs  db.rs  embedding.rs  error.rs  lib.rs  memory.rs  models.rs  otel.rs  schema.rs  telemetry.rs  tokens.rs
crates/engraph-ingest/: Cargo.toml
crates/engraph-ingest/src/: common.rs  ingest.rs  lib.rs  sweep.rs
crates/engraph-ingest/tests/: ingest_retrieve_roundtrip.rs
crates/engraph-retrieve/: Cargo.toml
crates/engraph-retrieve/src/: hybrid.rs  lib.rs  scope.rs
crates/engraph-retrieve/tests/: end_to_end.rs  hybrid_path.rs
docs/: bazel-symbol-indexing.md  engraph-embeddings.md  engraph.md  opentelemetry.md
docs/examples/: scip-go-bazel-index.sh  scip-java-bazel-index.sh
scripts/: install-scip-indexers.sh  install.ps1  install.sh
skills/engraph-refresh/: SKILL.md
