[workspace]
resolver = "2"
members = [
    "crates/engraph-core",
    "crates/engraph-compress",
    "crates/engraph-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Derek Shaw"]

[workspace.dependencies]
engraph-core = { path = "crates/engraph-core" }
engraph-compress = { path = "crates/engraph-compress" }

anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }
tiktoken-rs = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
sha2 = "0.10"
regex = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
