[workspace]
resolver = "2"
members = [
    "crates/engraph-core",
    "crates/engraph-compress",
    "crates/engraph-retrieve",
    "crates/engraph-ingest",
    "crates/engraph-codegraph",
    "crates/engraph-cli",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.95"
license = "MIT"
authors = ["Derek Shaw"]

[workspace.dependencies]
engraph-core = { path = "crates/engraph-core" }
engraph-compress = { path = "crates/engraph-compress" }
engraph-retrieve = { path = "crates/engraph-retrieve" }
engraph-ingest = { path = "crates/engraph-ingest" }
engraph-codegraph = { path = "crates/engraph-codegraph" }

anyhow = "1"
thiserror = "2.0.18"
clap = { version = "4", features = ["derive"] }
# need to pin to 0.39 for r2d2_sqlite 0.34
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }
tiktoken-rs = "0.11.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6.0.0"
sha2 = "0.11.0"
regex = "1"
shell-words = "1"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "process", "io-util", "signal"] }
scip = "0.7.1"
# 4.* releases are not yet stable. scip 0.7.1 requires 3.* anyway. 
protobuf = "3.7.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
