[package]
name = "engraph-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "engraph"
path = "src/main.rs"

[features]
default = []
embeddings = ["engraph-core/embeddings", "engraph-retrieve/embeddings"]

[dev-dependencies]
tempfile = "3"

[dependencies]
engraph-core.workspace = true
engraph-compress.workspace = true
engraph-retrieve.workspace = true
engraph-ingest.workspace = true
engraph-codegraph.workspace = true
anyhow.workspace = true
clap.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
regex.workspace = true
tokio.workspace = true
