[package]
name = "engraph-codegraph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
engraph-core.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
scip.workspace = true
protobuf.workspace = true

[dev-dependencies]
tempfile = "3"
