[package]
name = "engraph-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
embeddings = ["dep:fastembed"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
tiktoken-rs.workspace = true
chrono.workspace = true
dirs.workspace = true
fastembed = { version = "4", optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
