[package]
name = "engraph-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
engraph-core.workspace = true
engraph-compress.workspace = true
engraph-retrieve.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
sha2.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
