[package]
name = "engraph-retrieve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
engraph-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
engraph-ingest.workspace = true
uuid.workspace = true
